fix liveboard clipping in short windows with many rounds

--- a/ui/analyse/css/study/relay/_layout.scss
+++ b/ui/analyse/css/study/relay/_layout.scss
@@ -117,6 +117,10 @@ main.analyse.is-relay:not(.has-relay-tour) {
     .mchat {
       margin-top: $analyse-block-gap;
       flex: 5 0 30%;
+
+      &:has(.liveboard.mchat__tab-active) {
+        min-height: calc(min(max(var(--col3-uniboard-side-min, 250px), 350px), 100%) + 24px);
+      }
     }
   }
   .eval-chart-and-training {
